--- a/quotes_scraper/pyproject.toml
+++ b/quotes_scraper/pyproject.toml
@@ -14,6 +14,7 @@ gunicorn = "^22.0.0"
 psycopg2 = "^2.9.9"
 django-allauth = "^64.0.0"
 django-environ = "^0.11.2"
+sphinx = "^8.0.2"
 
 
 [tool.poetry.group.dev.dependencies]
